# OF_proj_1

./: .gitignore  LICENSE  README.md
masked_video.xcodeproj/: project.pbxproj
masked_video.xcodeproj/xcshareddata/xcschemes/: masked_video Debug.xcscheme  masked_video Release.xcscheme
scripts/: mask_generator.py  pyproject.toml  video_downloader.py
src/: ofApp.cpp  ofApp.h
